mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_generic_mismatch.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Generic type 'Pair' requires 2 type argument(s), got 1
--> test_scripts/error_cases/semantic_generic_mismatch.mux:3:10
   |
 3 | auto p = Pair<int>
   |          ^^^^^^^^^
   |
= help: Provide exactly 2 type arguments in angle brackets, e.g. Pair<T, U>
